# WordSpark

./: .gitignore  Cargo.toml  README.md  pyproject.toml
docs/: architecture.md  brief.md  data.md  features.md  processing.md  reference.md  roadmap.md  tech.md
py_src/: cfg.py
py_src/base/: cache.py  chars.py  debug.py  io.py  parser.py  timer.py
py_src/base/http/: __init__.py  advanced.py  basic.py  downloader.py  schema.py
py_src/collector/: articles.py  books.py  movies.py  news.py  papers.py  patents.py  reports.py
py_src/converter/: __init__.py
py_src/run/: __init__.py
src/RsLib/http/: client.rs
src/converter/: schema.rs
