[project]
name = "wordspark"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "br8km", email = "59230598+br8km@users.noreply.github.com" }
]
dependencies = [
    "loguru>=0.7.2",
    "orjson>=3.9.12",
    "requests>=2.31.0",
    "responses>=0.24.1",
    "arrow>=1.3.0",
    "regex>=2023.12.25",
    "selectolax>=0.3.19",
    "pytz>=2023.4",
    "tqdm>=4.66.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "run:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["py_src"]
